Added profile feature

--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -12,6 +12,6 @@
   <p>
     <%= f.text_area :content, placeholder: "Add notes", class: "input" %>
   </p>
-  <%= f.submit "Add Note", class: "btn btn-primary" %>
+  <%= f.submit "Add Note", class: "btn btn-primary", style: "margin: 0 100px;"  %>
 <% end %>
 
