--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,15 @@
         <div class="nav-inner">
           <div class="brand">NotesApp</div>
           <div class="nav-links">
-            <%= link_to "Home", root_path %>
-            <%= link_to "Profile", edit_user_registration_path %>
+            <%= link_to "Home", root_path %> 
+            <%= link_to "Profile", profile_path, class: "btn btn-ghost" %>
             <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
           </div>
         </div>
       </div>
     <% end %>
 
-    <div class="container">
+    <div >
       <% if notice.present? %>
         <div class="flash flash-notice"><%= notice %></div>
       <% end %>
@@ -32,7 +32,7 @@
         <div class="flash flash-alert"><%= alert %></div>
       <% end %>
 
-      <div class="panel section">
+      <div>
         <%= yield %>
       </div>
     </div>
